@@ -51,7 +51,8 @@ namespace video
 		//! Default constructor
 		SMaterialLayer()
 			: Texture(0),
-				TextureWrap(ETC_REPEAT),
+				TextureWrapU(ETC_REPEAT),
+				TextureWrapV(ETC_REPEAT),
 				BilinearFilter(true),
 				TrilinearFilter(false),
 				AnisotropicFilter(0),
@@ -106,7 +107,8 @@ namespace video
 				else
 					TextureMatrix = 0;
 			}
-			TextureWrap = other.TextureWrap;
+			TextureWrapU = other.TextureWrapU;
+			TextureWrapV = other.TextureWrapV;
 			BilinearFilter = other.BilinearFilter;
 			TrilinearFilter = other.TrilinearFilter;
 			AnisotropicFilter = other.AnisotropicFilter;
@@ -114,36 +116,6 @@ namespace video
 
 			return *this;
 		}
-
-		//! Texture
-		ITexture* Texture;
-
-		//! Texture Clamp Mode
-		u8 TextureWrap;
-
-		//! Is bilinear filtering enabled? Default: true
-		bool BilinearFilter:1;
-
-		//! Is trilinear filtering enabled? Default: false
-		/** If the trilinear filter flag is enabled,
-		the bilinear filtering flag is ignored. */
-		bool TrilinearFilter:1;
-
-		//! Is anisotropic filtering enabled? Default: 0, disabled
-		/** In Irrlicht you can use anisotropic texture filtering
-		in conjunction with bilinear or trilinear texture
-		filtering to improve rendering results. Primitives
-		will look less blurry with this flag switched on. The number gives 
-		the maximal anisotropy degree, and is often in the range 2-16. 
-		Value 1 is equivalent to 0, but should be avoided. */
-		u8 AnisotropicFilter;
-
-		//! Bias for the mipmap choosing decision.
-		/** This value can make the textures more or less blurry than with the
-		default value of 0. The value (divided by 8.f) is added to the mipmap level
-		chosen initially, and thus takes a smaller mipmap for a region
-		if the value is positive. */
-		s8 LODBias;
 
 		//! Gets the texture transformation matrix
 		/** \return Texture matrix of this layer. */
@@ -187,7 +159,8 @@ namespace video
 		{
 			bool different =
 				Texture != b.Texture ||
-				TextureWrap != b.TextureWrap ||
+				TextureWrapU != b.TextureWrapU ||
+				TextureWrapV != b.TextureWrapV ||
 				BilinearFilter != b.BilinearFilter ||
 				TrilinearFilter != b.TrilinearFilter ||
 				AnisotropicFilter != b.AnisotropicFilter ||
@@ -206,6 +179,38 @@ namespace video
 		\return True if layers are equal, else false. */
 		inline bool operator==(const SMaterialLayer& b) const
 		{ return !(b!=*this); }
+
+		//! Texture
+		ITexture* Texture;
+
+		//! Texture Clamp Mode
+		/** Values are tkane from E_TEXTURE_CLAMP. */
+		u8 TextureWrapU:4;
+		u8 TextureWrapV:4;
+
+		//! Is bilinear filtering enabled? Default: true
+		bool BilinearFilter:1;
+
+		//! Is trilinear filtering enabled? Default: false
+		/** If the trilinear filter flag is enabled,
+		the bilinear filtering flag is ignored. */
+		bool TrilinearFilter:1;
+
+		//! Is anisotropic filtering enabled? Default: 0, disabled
+		/** In Irrlicht you can use anisotropic texture filtering
+		in conjunction with bilinear or trilinear texture
+		filtering to improve rendering results. Primitives
+		will look less blurry with this flag switched on. The number gives 
+		the maximal anisotropy degree, and is often in the range 2-16. 
+		Value 1 is equivalent to 0, but should be avoided. */
+		u8 AnisotropicFilter;
+
+		//! Bias for the mipmap choosing decision.
+		/** This value can make the textures more or less blurry than with the
+		default value of 0. The value (divided by 8.f) is added to the mipmap level
+		chosen initially, and thus takes a smaller mipmap for a region
+		if the value is positive. */
+		s8 LODBias;
 
 	private:
 		friend class SMaterial;
